# gotaxi-backend

./: .env.example  .gitignore  API_AUTH_READY.md  API_SPRINT2_READY.md  BACKEND_FASTAPI.md  FRONTEND_MIGRATION_V2.md  alembic.ini  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_nullable_chauffeur_kyc.py  003_colis_mobile_refactor.py  004_colis_pricing.py  005_tarif_trajet_ville_fk.py  006_add_celtis_operator.py  007_add_fedapay_operator.py  008_payout_account.py  009_demandes_inscription_chauffeur.py  010_reservation_modalite_paiement.py  011_add_vehicule_interior_photos.py  012_add_vehicule_docs.py  013_add_titre_livret_expiration.py  014_remove_livret_bord_expiration.py  015_refactor_paiement_plateforme.py  016_avis_constraints_and_indexes.py  017_user_genre.py  9efd9ef701fd_add_villes_gares.py
app/: config.py  dependencies.py  exceptions.py  main.py
app/core/: database.py  logging.py  redis_client.py  security.py
app/integrations/: celtis.py  fcm.py  fedapay.py  moov_money.py  mtn_momo.py  orange_money.py  s3_storage.py  twilio_sms.py
app/middlewares/: rate_limit.py
app/models/: __init__.py  audit.py  avis.py  base.py  chauffeur.py  colis.py  demande_chauffeur.py  gare.py  notification.py  payout_account.py  reservation.py  suivi.py  tarif_trajet.py  transaction.py  user.py  vehicule.py  ville.py  voyage.py  wallet.py
app/repositories/: user_repository.py
app/routers/: __init__.py  admin.py  auth.py  (+13 more)
docker/: Dockerfile  docker-compose.yml
keys/: public.pem
scripts/: seed_admins.py
tests/: conftest.py
(+36 files in other folders)
