[project]
name = "gotaxi-backend"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "pydantic==2.9.*",
    "pydantic-settings==2.6.*",
    "sqlalchemy[asyncio]==2.0.*",
    "asyncpg==0.30.*",
    "alembic==1.14.*",
    "redis[hiredis]==5.2.*",
    "celery[redis]==5.4.*",
    "python-jose[cryptography]==3.3.*",
    "passlib[bcrypt]==1.7.*",
    "python-multipart==0.0.*",
    "httpx==0.28.*",
    "firebase-admin==6.6.*",
    "twilio==9.3.*",
    "boto3==1.35.*",
    "pillow==11.0.*",
    "python-dotenv==1.0.*",
    "structlog==24.4.*",
    "prometheus-fastapi-instrumentator==7.0.*",
    "geoalchemy2==0.16.*",
    "shapely==2.0.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
    "pytest-cov==6.0.*",
    "httpx==0.28.*",
    "faker==33.1.*",
    "ruff==0.8.*",
    "mypy==1.13.*",
    "pre-commit==4.0.*",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true